--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-565-onix-digital
                       <a href="mailto:sale@karnixengineering.com">sale@karnixengineering.com</a>
                     </div>
                     <div style="margin-top: 5px;" class="call-button">
-                      <a href="tel:+919423948515"><i class="fa fa-phone"></i> 91-9423948515</a>
+                      <a href="tel:+919112239533"><i class="fa fa-phone"></i> 91-9112239533</a>
                     </div>
                   </div>
                 </div>
@@ -652,7 +652,7 @@ https://templatemo.com/tm-565-onix-digital
             </div>
             
             <div class="info">
-              <span class="contact-item"><i class="fa fa-phone"></i> <a href="tel:+919423948515">91-9423948515</a></span>
+              <span class="contact-item"><i class="fa fa-phone"></i> <a href="tel:+919112239533">91-9112239533</a></span>
               <span class="contact-item"><i class="fa fa-envelope"></i> <a href="mailto:sale@karnixengineering.com">sale@karnixengineering.com</a></span>
             </div>
           </div>
@@ -710,11 +710,11 @@ https://templatemo.com/tm-565-onix-digital
             <div class="logo">
               <a href="index.html"><img style="width:auto; height: 80px;border-radius: 40px;margin-bottom: -1px;" src="assets/images/KR WEB@4x-80.jpg" alt="Karnix engineering"></a>
             </div>
-            <a href="mailto:sale@karnixengineering.com">sale@karnixengineering.com</a>
+            <a href="mailto:Info@karnixengineering.com">Info@karnixengineering.com</a>
             <ul>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
@@ -723,13 +723,13 @@ https://templatemo.com/tm-565-onix-digital
           <div class="services footer-item">
             <h4>Services</h4>
             <ul>
-              <li><a href="#">Mini Storage Building</a></li>
-              <li><a href="#">Warehouse buildings</a></li>
-              <li><a href="#">Aircraft hangar</a></li>
-              <li><a href="#">Structural</a></li>
-              <li><a href="#">Railway platform shelters</a></li>
-              <li><a href="#">Multi-level garages, open parking lots </a></li>
-              <li><a href="#">Commercial buildings</a></li>
+              <li><a href="#services">Mini Storage Building</a></li>
+              <li><a href="#services">Warehouse buildings</a></li>
+              <li><a href="#services">Aircraft hangar</a></li>
+              <li><a href="#services">Structural</a></li>
+              <li><a href="#services">Railway platform shelters</a></li>
+              <li><a href="#services">Multi-level garages, open parking lots </a></li>
+              <li><a href="#services">Commercial buildings</a></li>
               
             </ul>
           </div>
@@ -757,8 +757,8 @@ https://templatemo.com/tm-565-onix-digital
                 </p>
                 <p style="display: flex; align-items: center; margin: 5px 0;">
                     <i class="fas fa-phone" style="margin-right: 10px; color: #007bff;"></i> 
-                    <a href="tel:+919423948515" style="color: #343a40; text-decoration: none;" onmouseover="this.style.color='#007bff'" onmouseout="this.style.color='#343a40'">
-                        91-9423948515
+                    <a href="tel:+919112239533" style="color: #343a40; text-decoration: none;" onmouseover="this.style.color='#007bff'" onmouseout="this.style.color='#343a40'">
+                        91-9112239533
                     </a>
                 </p>
                 <p style="display: flex; align-items: center; margin: 5px 0;">
