--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ https://templatemo.com/tm-565-onix-digital
             <div class="col-lg-6 offset-lg-3">
                 <div class="section-heading">
                     <h2>Our Recent <em>Projects</em> &amp; Case Studies <span>for Clients</span></h2>
-                    <span>Our Portfolio</span>
+                    <!-- <span>Our Portfolio</span> -->
                 </div>
             </div>
         </div>
@@ -654,6 +654,9 @@ https://templatemo.com/tm-565-onix-digital
             <div class="info">
               <span class="contact-item"><i class="fa fa-phone"></i> <a href="tel:+919112239533">91-9112239533</a></span>
               <span class="contact-item"><i class="fa fa-envelope"></i> <a href="mailto:sale@karnixengineering.com">sale@karnixengineering.com</a></span>
+            </div>
+            <div class="info">
+              <span class="contact-item"><i class="fa fa-envelope"></i> <a href="mailto:Info@karnixengineering.com">Info@karnixengineering.com</a></span>
             </div>
           </div>
         </div>
