--- a/index.html
+++ b/index.html
@@ -365,19 +365,7 @@ https://templatemo.com/tm-565-onix-digital
                         </div>
                     </div>
  
-                    <div class="custom-item">
-                        <div class="custom-thumb">
-                            <img class="custom-service-image" src="assets/images/P5- Tekla Model.jpg" alt="">
-                            <div class="custom-hover-effect">
-                                <div class="custom-inner-content">
-                                    <div class="custom-card">
-                                      <h4>Tekla Model</h4>
-                                      <!-- <span>SEO &amp; Marketing</span> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                     
                     <div class="custom-item">
                         <div class="custom-thumb">
@@ -714,6 +702,7 @@ https://templatemo.com/tm-565-onix-digital
               <a href="index.html"><img style="width:auto; height: 80px;border-radius: 40px;margin-bottom: -1px;" src="assets/images/KR WEB@4x-80.jpg" alt="Karnix engineering"></a>
             </div>
             <a href="mailto:Info@karnixengineering.com">Info@karnixengineering.com</a>
+            <a href="mailto:sale@karnixengineering.com">sale@karnixengineering.com</a>
             <ul>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
